# mistral-specs

./: .gitignore  .gitreview  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
specs/: template.rst
specs/mitaka/approved/: example.rst  use-workflow-id-in-rest-api.rst
specs/mitaka/implemented/: mistral-fail-transition-message.rst  mistral-rerun-update-env.rst  mistral-workflow-resource-sharing.rst
specs/newton/approved/: event-notification-trigger.rst  mistral-custom-actions-api.rst  mistral-item-filtering.rst
specs/newton/implemented/: mistral-multi-vim-support.rst
specs/ocata/approved/: mistral-custom-actions-api.rst
specs/ocata/implemented/: publish-on-failure.rst  yaql-tasks-function.rst
specs/pike/approved/: advanced_publishing.rst  create-and-run-workflows-within-a-namespace.rst  ha.rst  mistral-extra.rst  mistral-multi-region-support.rst  secure-sensitive-data.rst  workflow-error-analysis.rst  workflow-global-context.rst
specs/pike/implemented/: mistral-multi-region-support.rst
specs/policy/: patch-abandonment.rst
specs/rocky/: custom-context-for-executions.rst
specs/rocky/approved/: custom-context-for-executions.rst
tests/: test_directories.py  test_titles.py
