[metadata]
name = mistral-specs
summary = OpenStack Workflow Engine Program Development Specs
description-file =
    README.rst
license = Apache-2.0
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://specs.openstack.org/openstack/mistral-specs/
classifier =
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
