[metadata]
name = mistral-specs
summary = OpenStack Workflow Engine Program Development Specs
description_file =
    README.rst
license = Apache-2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://specs.openstack.org/openstack/mistral-specs/
classifier =
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
